# acf-parser

./: Cargo.toml  LICENSE  README.md
acfs/: appmanifest_228980.acf  appmanifest_250820.acf  appmanifest_730.acf  appmanifest_745.acf  simple.acf
src/: errors.rs  lib.rs  main.rs  parser.rs
